# pytest-semantic

./: .env.example  .gitignore  README.md  pyproject.toml
.agents/rules/: writing-guide.md
.github/workflows/: publish.yml
examples/: demo.py
src/pytest_semantic/: __init__.py  cache.py  core.py  plugin.py  server.py  tracer.py
tests/: test_cache.py  test_core.py  test_decorator_and_core.py  test_dogfood.py  test_force_coverage.py  test_imports.py  test_plugin.py  test_redaction.py  test_server.py  test_tracer.py  test_tracer_coverage.py
